--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^3.3.2",
+    "@reduxjs/toolkit": "^2.2.3",
     "antd": "^5.12.5",
     "aos": "^2.3.4",
     "apexcharts": "^3.45.1",
@@ -59,6 +60,7 @@
     "react-notifications": "^1.7.4",
     "react-owl-carousel": "^2.3.1",
     "react-photoswipe-gallery": "^3.0.1",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
